<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">HomeworkApp by Basilescu Bogdan</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Welcome">Welcome</string>
    <string name="LogoutBtn">LogOut</string>
    <string name="ChangePassword">ChangePass</string>
    <string name="UsefulLinks">UsefulLinks</string>
    <string name="Music">Music</string>
    <string name="ChangePassAct">Change Password</string>
    <string name="pass1">Password:</string>
    <string name="hint1">Insert old password</string>
    <string name="hint2">Insert new password</string>
    <string name="AddView">Add View</string>
    <string name="RemoveView">Remove View</string>
    <string name="City">City:</string>
    <string name="CheckWeather">Check Weather</string>
    <string name="outputWeather">City, Country :</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="location">Location</string>
    <string name="country">Country:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="weather">Weather</string>
</resources>
